# vamr_miniproject_py

./: .gitignore  README.md  makefile  pyproject.toml  run.py  setup.py
.conda/conda-meta/: history  libffi-3.4.4-hca03da5_1.json  ncurses-6.4-h313beb8_0.json  openssl-3.0.15-h80987f9_0.json  pip-24.2-py311hca03da5_0.json  python-3.11.11-hb885b13_0.json  readline-8.2-h1a28f6b_0.json  setuptools-75.1.0-py311hca03da5_0.json  sqlite-3.45.3-h80987f9_0.json  tk-8.6.14-h6ba3021_0.json  wheel-0.44.0-py311hca03da5_0.json  xz-5.4.6-h80987f9_1.json  zlib-1.2.13-h18a0788_1.json
.conda/etc/: aau_token
.conda/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
.conda/share/terminfo/63/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
.conda/share/terminfo/64/: ddr  dec-vt220
.conda/share/terminfo/65/: emu-220
.conda/share/terminfo/67/: go140  go140w  go225
.conda/share/terminfo/68/: hazel  hp2392  hp2641a  hp300h  hp700-wy  hp9845  hp98550  hpex  hpsub
.conda/share/terminfo/69/: ims-ansi
.conda/share/terminfo/6b/: kt7
.conda/share/terminfo/6d/: mai  mt4520-rv
.conda/share/terminfo/6e/: ncsa  ncsa-m  ncsa-m-ns  ncsa-ns  ncsa-vt220  netbsd6  news-29  news-29-euc  news-29-sjis  news-33  news-33-euc  news-33-sjis  news-42  news-42-euc  news-42-sjis  news-old-unk  news-unk  news28  news29  nwp512  nwp513  (+4 more)
src/: __init__.py  config.py  image.py  main.py
src/continuous_operation/: __init__.py  angle_utils.py  process_frame.py
src/initialization/: __init__.py  bootstrap.py  visualization.py
src/utils/: image_reader.py  utils.py
(+93 files in other folders)
